# analise_preditiva

./: README.md  app.py  pyproject.toml  requirements.txt
